EDUAPP-15 grup düzenleme geliştirildi, test edildi ve deploy edildi.

--- a/src/config/wapc_config.json
+++ b/src/config/wapc_config.json
@@ -25,14 +25,16 @@
                 "param":""
             },
             {
-                "command":"max-associations ",
-                "param":""
-            },
-            {
                 "command":"exit"
+            }
+        ],
+        "subprocess": [
+            {
+
             }
         ]
     },
+
     "unset_ssid":{
         "enable":true,
         "configure":true,
