EDUAPP-17, EDUAPP-32, EDUAPP-22, EDUAPP-39 have been resolved These issues related with each other. Regarding this process I have been implemented a bundle commit to cover all those issues. Doc: http://agile.labristeknoloji.com:8090/pages/viewpage.action?pageId=1179708

--- a/src/config/wapc_config.json
+++ b/src/config/wapc_config.json
@@ -58,19 +58,6 @@
         "configure":true,
         "commands":[
             {
-                "command":"interface Dot11Radio",
-                "param": "",
-                "type": "interface"
-            },
-            {
-                "command":"no ssid ",
-                "param":"",
-                "type": "ssid"
-            },
-            {
-                "command":"exit"
-            },
-            {
                 "command":"no dot11 ssid ",
                 "param":"",
                 "type": "ssid"
@@ -80,6 +67,7 @@
     "set_ssid":{
         "enable":true,
         "configure":true,
+        "pre":"unset",
         "commands":[
             {
                 "command":"dot11 ssid ",
