EDUAPP-4: Improved for package v1.0.0
EDUAPP-22: Fixed for package v1.0.0
EDUAPP-25: Roaming ayarı yapmak
EDUAPP-26: Kanal ayarı yapmak
EDUAPP-27: Maximum kullanıcı ayarı yapmak
EDUAPP-32: WAP'a ayar basmak
EDUAPP-36: Show ssid
EDUAPP-37: Show channel özelliği
EDUAPP-38: Show association özelliği
EDUAPP-39: Help çıktısı
EDUAPP-40: Grup bazlı komut set, unset

Most of features implemented to get software ready for demo. Some of them may need to be improved or process a bug fix.

Doc: /doc

--- a/src/config/cisco/default/default/slave-config.conf
+++ b/src/config/cisco/default/default/slave-config.conf
@@ -1,6 +1,4 @@
-Current configuration : 3190 bytes
-!
-version 12.3
+!slave conf (12.3)
 no service pad
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -30,9 +28,6 @@ aaa group server tacacs+ tac_admin
 aaa group server radius rad_pmip
 !
 aaa group server radius dummy
-!
-aaa group server radius Infrastructure
- server 10.6.1.1 auth-port 1812 acct-port 1813
 !
 aaa authentication login eap_methods group rad_eap
 aaa authentication login mac_methods local
@@ -95,6 +90,8 @@ logging snmp-trap alerts
 logging snmp-trap critical
 logging snmp-trap errors
 logging snmp-trap warnings
+!
+snmp-server community public ro
 radius-server local
   no authentication eapfast
   no authentication mac
@@ -110,22 +107,10 @@ bridge 1 route ip
 !         
 !
 wlccp ap username wds1 password 7 0703204E5C000A
-wlccp authentication-server infrastructure method_Infrastructure
-wlccp authentication-server client any eap_methods
-  ssid LBREAP
-wlccp wds priority 200 interface BVI1
 !
 line con 0
- transport preferred all
- transport output all
 line vty 0 4
- transport preferred all
- transport input all
- transport output all
 line vty 5 15
- transport preferred all
- transport input all
- transport output all
 !
 end
 
