EDUAPP-4: Fixed and Improved package v1.1.0-2
Group methods have some bugs after reccovering, they all fixed.

Doc: https://agile.labristeknoloji.com/wapc

--- a/src/config/wapc_config.json
+++ b/src/config/wapc_config.json
@@ -53,7 +53,7 @@
             }
         ]
     },
-    "set_maxclients":{
+    "set_maxclient":{
         "enable":true,
         "configure":true,
         "commands":[
@@ -141,6 +141,16 @@
         "commands" : [
             {
                 "command" : "show processes | include CPU utilization "
+            }
+        ]
+    },
+
+    "show_maxclient":{
+        "enable": true,
+        "configure": false,
+        "commands": [
+            {
+                "command": "show run | Include max-associations"
             }
         ]
     },
