--- a/src/config/database.cfg
+++ b/src/config/database.cfg
@@ -26,6 +26,7 @@ db_name = db_wapc
 username = wapc
 password = 1q2w3e4r
 host = 192.168.0.41
+table_prefix = apc
 
 # CouchDB configuration
 [couchdb]
