--- a/src/config/database.cfg
+++ b/src/config/database.cfg
@@ -31,7 +31,7 @@ table_prefix = apc
 # CouchDB configuration
 [couchdb]
 db_name = log_wapc
-username = wapc
+username = root
 password = 1q2w3e4r
-host = localhost
+host = http://localhost:5984
 
