EDUAPP-4: Improved package v1.1.0-6
Bug fixed

Doc: http://agile.labristeknoloji.com/wapc

--- a/src/config/wapc_config.json
+++ b/src/config/wapc_config.json
@@ -53,7 +53,7 @@
             }
         ]
     },
-    "set_maxclients":{
+    "set_maxclient":{
         "enable":true,
         "configure":true,
         "commands":[
@@ -145,7 +145,7 @@
         ]
     },
 
-    "show_maxclients":{
+    "show_maxclient":{
         "enable": true,
         "configure": false,
         "commands": [
