--- a/src/config/database.cfg
+++ b/src/config/database.cfg
@@ -30,7 +30,8 @@ table_prefix = apc
 
 # CouchDB configuration
 [couchdb]
-db_name = log_wapc
+db_name = device_log
+db_daemon = daemon_log
 username = root
 password = 1q2w3e4r
 host = http://localhost:5984
