Previosly uncommitted source committed now

--- a/src/config/database.cfg
+++ b/src/config/database.cfg
@@ -30,8 +30,8 @@ table_prefix = apc
 
 # CouchDB configuration
 [couchdb]
-db_name = device_log
-db_daemon = daemon_log
+db_name = /var/log/labris/device_%(time)s.log
+db_daemon = /var/log/labris/daemon_%(time)s.log
 username = root
 password = 1q2w3e4r
 host = http://localhost:5984
